# ComfyUI-OpenBlender3D-Pack

./: .gitignore  README.md  __init__.py  comfy-env-root.toml  download_progress.py  install.py  openblender_components.json  openblender_lazy.py  prestartup_script.py  requirements.txt
ComfyUI/Environment_Checker/: Diagnose.json
components/: __init__.py
components/lito/: .gitignore  README.md  __init__.py  comfy-env-root.toml  comfy-test.toml  prestartup_script.py  pyproject.toml
components/lito/nodes/: __init__.py  comfy-env.toml  comfy_utils.py  export_ply.py  inference.py  load_model.py  preprocess.py  preview_nodes.py
components/lito/nodes/lito_src/lito/eval_scripts/: st_model_utils.py
components/lito/nodes/lito_src/lito/integrations/trellis/: __init__.py  trellis_sparse_structure.py  trellis_utils.py
components/lito/nodes/lito_src/lito/integrations/trellis/representations/mesh/: cube2mesh.py
components/lito/nodes/lito_src/lito/models/: _comfy_mlp.py  dino.py  dit.py  layers.py  linear.py  perceiver_encoder.py  point_decoder.py  point_encoder.py  pointnet_utils.py  resnet.py  spoint_encoder.py  struct_attn.py  vector_decoder.py
components/lito/nodes/lito_src/lito/odelibs/: ode_solvers.py
components/lito/nodes/lito_src/lito/trainers/: base.py  lito_dit_trainer.py  lito_trainer.py
components/lito/nodes/lito_src/plibs/: flash_utils.py  gs_utils.py  linalg_utils.py  ppoint.py  rigid_motion.py  structures.py  utils.py
components/lito/workflows/: basic.json
scripts/: openblender_smoke_tests.py
web/: pixal3d_camera_control.js  viewer_fbx.html
(+345 files in other folders)
